force-app/main/default/objects/FEC_Additional_Info__c/FEC_Additional_Info__c.object-meta.xml
<CustomObject>
    <description>Thông tin bổ sung cho Case trong quy trình xử lý</description>
    <label>Additional Info</label>
    <nameField>
        <displayFormat>Additional Info - {0}</displayFormat>
        <label>Additional Info</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Additional Info</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>