force-app/main/default/objects/FEC_Additional_Info__c/fields/adfg__c.field-meta.xml
<CustomField>
    <fullName>adfg__c</fullName>
    <label>adfg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>