force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Active_Loan_Or_Disbursed__c.field-meta.xml
<CustomField>
    <fullName>FEC_Active_Loan_Or_Disbursed__c</fullName>
    <description>Khoản vay đang hoạt động hoặc đã giải ngân</description>
    <label>Active Loan Or Disbursed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>