force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Address_Or_Email__c.field-meta.xml
<CustomField>
    <fullName>FEC_Address_Or_Email__c</fullName>
    <description>Địa chỉ hoặc email liên quan</description>
    <label>Address Or Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>