force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Adjustment_Method__c.field-meta.xml
<CustomField>
    <fullName>FEC_Adjustment_Method__c</fullName>
    <label>Adjustment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Same contract owner</fullName>
            </value>
            <value>
                <fullName>Different contract owner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>