force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Allocation_History__c.field-meta.xml
<CustomField>
    <fullName>FEC_Allocation_History__c</fullName>
    <description>Lịch sử phân bổ</description>
    <label>Allocation History</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Có</fullName>
            </value>
            <value>
                <fullName>Không</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>