force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_App_Consult_Result__c.field-meta.xml
<CustomField>
    <fullName>FEC_App_Consult_Result__c</fullName>
    <description>Kết quả tư vấn ứng dụng</description>
    <label>App Consult Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hướng dẫn thao tác thành công</fullName>
            </value>
            <value>
                <fullName>Chưa có cơ hội hướng dẫn</fullName>
            </value>
            <value>
                <fullName>Đã tra cứu nhưng cần giải thích thêm</fullName>
            </value>
            <value>
                <fullName>Không biết cách tra cứu</fullName>
            </value>
            <value>
                <fullName>Đăng ký tài khoản chưa thành công</fullName>
            </value>
            <value>
                <fullName>Chưa đồng bộ thông tin HĐ/ thẻ</fullName>
            </value>
            <value>
                <fullName>Ứng dụng lỗi</fullName>
            </value>
            <value>
                <fullName>Chưa tải ứng dụng</fullName>
            </value>
            <value>
                <fullName>Đã xóa ứng dụng</fullName>
            </value>
            <value>
                <fullName>Không có smart phone</fullName>
            </value>
            <value>
                <fullName>Khác (ghi chú chi tiết)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>