force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_App_ID__c.field-meta.xml
<CustomField>
    <fullName>FEC_App_ID__c</fullName>
    <label>App ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>