force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_App_Version__c.field-meta.xml
<CustomField>
    <fullName>FEC_App_Version__c</fullName>
    <description>Phiên bản ứng dụng</description>
    <label>App Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>