force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Application_ID_List__c.field-meta.xml
<CustomField>
    <fullName>FEC_Application_ID_List__c</fullName>
    <description>Danh sách mã hồ sơ (User có thể nhập nhiều giá trị)</description>
    <label>Application ID List</label>
    <type>TextArea</type>
</CustomField>