force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Application_Status_At_FEC__c.field-meta.xml
<CustomField>
    <fullName>FEC_Application_Status_At_FEC__c</fullName>
    <description>Trạng thái hồ sơ tại FEC</description>
    <label>Application Status At FEC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>