force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Apply_for_Loans_Elsewhere__c.field-meta.xml
<CustomField>
    <fullName>FEC_Apply_for_Loans_Elsewhere__c</fullName>
    <description>Vay thêm tại nơi khác</description>
    <label>Apply for Loans Elsewhere</label>
    <length>255</length>
    <type>Text</type>
</CustomField>