force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Assigned_Collector__c.field-meta.xml
<CustomField>
    <fullName>FEC_Assigned_Collector__c</fullName>
    <description>Nhân viên thu hồi được phân công</description>
    <label>Assigned Collector</label>
    <length>255</length>
    <type>Text</type>
</CustomField>