force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Auth_Code__c.field-meta.xml
<CustomField>
    <fullName>FEC_Auth_Code__c</fullName>
    <description>Mã xác thực giao dịch</description>
    <label>Auth Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>