force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Authorization_Code__c.field-meta.xml
<CustomField>
    <fullName>FEC_Authorization_Code__c</fullName>
    <description>Mã chuẩn chi</description>
    <label>Authorization Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>