force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Bank_Branch__c.field-meta.xml
<CustomField>
    <fullName>FEC_Bank_Branch__c</fullName>
    <label>Bank Branch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>