force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Beneficiary_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>FEC_Beneficiary_Account_Number__c</fullName>
    <label>Beneficiary Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>