force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Business_Eligible__c.field-meta.xml
<CustomField>
    <fullName>FEC_Business_Eligible__c</fullName>
    <description>Đủ điều kiện nghiệp vụ</description>
    <label>Business Eligible</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Có</fullName>
            </value>
            <value>
                <fullName>Không</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>