force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Callback__c.field-meta.xml
<CustomField>
    <fullName>FEC_Callback__c</fullName>
    <description>Gọi lại</description>
    <label>Callback</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>