force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Callback_Reason_MRC__c.field-meta.xml
<CustomField>
    <fullName>FEC_Callback_Reason_MRC__c</fullName>
    <label>Callback Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CS Callback Scheduled</fullName>
            </value>
            <value>
                <fullName>Relative Requested Callback</fullName>
            </value>
            <value>
                <fullName>Customer Busy</fullName>
            </value>
            <value>
                <fullName>Customer Requests Delivery Address Verification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>