force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Cancel_Reason__c.field-meta.xml
<CustomField>
    <fullName>FEC_Cancel_Reason__c</fullName>
    <description>Lý do hủy</description>
    <label>Cancel Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>