force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Card_Closure_Confirmation_Request__c.field-meta.xml
<CustomField>
    <fullName>FEC_Card_Closure_Confirmation_Request__c</fullName>
    <description>KH yêu cầu giấy xác nhận đóng thẻ</description>
    <label>Card Closure Confirmation Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Office Pickup</fullName>
            </value>
            <value>
                <fullName>Postal Address</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Both Email and Postal Address</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>