force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Card_Delivery_Issue_Reason__c.field-meta.xml
<CustomField>
    <fullName>FEC_Card_Delivery_Issue_Reason__c</fullName>
    <description>Lý do KH chưa nhận được thẻ</description>
    <label>Card Delivery Issue Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contacted but Card Not Delivered</fullName>
            </value>
            <value>
                <fullName>No Delivery Contact</fullName>
            </value>
            <value>
                <fullName>Missed Delivery Call</fullName>
            </value>
            <value>
                <fullName>Unavailable at Delivery Address</fullName>
            </value>
            <value>
                <fullName>Unavailable During Business Hours</fullName>
            </value>
            <value>
                <fullName>Prefer Pickup at Post Office/Office</fullName>
            </value>
            <value>
                <fullName>Previously Refused Card</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>