force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Card_Not_Received_Reason__c.field-meta.xml
<CustomField>
    <fullName>FEC_Card_Not_Received_Reason__c</fullName>
    <description>Lý do không đồng ý giữ thẻ</description>
    <label>Card Not Received Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Borrowing from Other Provider</fullName>
            </value>
            <value>
                <fullName>After Business Hours Only</fullName>
            </value>
            <value>
                <fullName>Do Not Want Card</fullName>
            </value>
            <value>
                <fullName>Cannot Take Calls During Work</fullName>
            </value>
            <value>
                <fullName>Pickup at Post Office/Branch</fullName>
            </value>
            <value>
                <fullName>No Fixed Address</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>