force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Card_Possession__c.field-meta.xml
<CustomField>
    <fullName>FEC_Card_Possession__c</fullName>
    <description>Khách hàng đang giữ thẻ hay không</description>
    <label>Card Possession</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Có</fullName>
            </value>
            <value>
                <fullName>Không</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>