force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Card_Retention_Decline_Reason__c.field-meta.xml
<CustomField>
    <fullName>FEC_Card_Retention_Decline_Reason__c</fullName>
    <description>Lý do không đồng ý giữ thẻ</description>
    <label>Card Retention Decline Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Borrowing from Other Provider</fullName>
            </value>
            <value>
                <fullName>Unattractive Promotions</fullName>
            </value>
            <value>
                <fullName>Overseas</fullName>
            </value>
            <value>
                <fullName>Low Credit Limit</fullName>
            </value>
            <value>
                <fullName>No Longer Need Card</fullName>
            </value>
            <value>
                <fullName>Not Tech-Savvy</fullName>
            </value>
            <value>
                <fullName>High Interest/Fees</fullName>
            </value>
            <value>
                <fullName>Sales Advice Unclear/Inaccurate</fullName>
            </value>
            <value>
                <fullName>Sales Requested Cancel &amp; Reapply</fullName>
            </value>
            <value>
                <fullName>Annual Fee</fullName>
            </value>
            <value>
                <fullName>Loan/Card Opening Process</fullName>
            </value>
            <value>
                <fullName>Debt Reminder Process</fullName>
            </value>
            <value>
                <fullName>Payment Process</fullName>
            </value>
            <value>
                <fullName>Collection Staff Attitude</fullName>
            </value>
            <value>
                <fullName>Mandatory Card Cancellation</fullName>
            </value>
            <value>
                <fullName>Survey Failed (Details)</fullName>
            </value>
            <value>
                <fullName>Other (Details)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>