force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Card_Status__c.field-meta.xml
<CustomField>
    <fullName>FEC_Card_Status__c</fullName>
    <description>Tình trạng thẻ</description>
    <label>Card Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Khóa G và RSN 00</fullName>
            </value>
            <value>
                <fullName>Khóa G và RSN 02</fullName>
            </value>
            <value>
                <fullName>Khóa Q</fullName>
            </value>
            <value>
                <fullName>Khóa W</fullName>
            </value>
            <value>
                <fullName>Khác</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>