force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Card_Type_1__c.field-meta.xml
<CustomField>
    <fullName>FEC_Card_Type_1__c</fullName>
    <description>Loại thẻ mà KH muốn thay thế PIN</description>
    <label>Card Type 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary card</fullName>
            </value>
            <value>
                <fullName>Supplementary card</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>