force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Card_Type_2__c.field-meta.xml
<CustomField>
    <fullName>FEC_Card_Type_2__c</fullName>
    <description>Loại thẻ 2</description>
    <label>Card Type 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>