force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_City_Province__c.field-meta.xml
<CustomField>
    <fullName>FEC_City_Province__c</fullName>
    <description>Province City</description>
    <label>Province/ City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>