force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_CMS_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>FEC_CMS_Phone_Number__c</fullName>
    <description>Số điện thoại CMS (đúng / không đúng)</description>
    <label>CMS Phone Number</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phải</fullName>
            </value>
            <value>
                <fullName>Không phải</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>