force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Collected_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>FEC_Collected_Contract_Number__c</fullName>
    <description>SHĐ bị nhắc nợ</description>
    <label>Collected Contract Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>