force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Collection_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>FEC_Collection_Contact_Number__c</fullName>
    <description>SĐT gọi nhắc nợ (NV/ Hệ thống tự động/ SMS)</description>
    <label>Collection Contact Number</label>
    <type>Phone</type>
</CustomField>