force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Collection_Transfer_Reason__c.field-meta.xml
<CustomField>
    <fullName>FEC_Collection_Transfer_Reason__c</fullName>
    <description>Lý do chuyển Collections</description>
    <label>Collection Transfer Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DPD 30 or Above</fullName>
            </value>
            <value>
                <fullName>Charged-off Contract</fullName>
            </value>
            <value>
                <fullName>Litigation Contract</fullName>
            </value>
            <value>
                <fullName>Allocation History</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>