force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Collections_Complaint_Issue_2__c.field-meta.xml
<CustomField>
    <fullName>FEC_Collections_Complaint_Issue_2__c</fullName>
    <description>Vấn đề khiếu nại liên quan thu hồi nợ (2)</description>
    <label>Collections Complaint Issue 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tiền góp</fullName>
            </value>
            <value>
                <fullName>Tiền thanh lý</fullName>
            </value>
            <value>
                <fullName>Các loại phí, lãi phát sinh</fullName>
            </value>
            <value>
                <fullName>Thời hạn thanh toán</fullName>
            </value>
            <value>
                <fullName>Chương trình miễn giảm tiền</fullName>
            </value>
            <value>
                <fullName>Nợ quá hạn</fullName>
            </value>
            <value>
                <fullName>Nhóm nợ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>