force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Collections_Complaint_Issue_3__c.field-meta.xml
<CustomField>
    <fullName>FEC_Collections_Complaint_Issue_3__c</fullName>
    <description>Vấn đề khiếu nại liên quan thu hồi nợ (3)</description>
    <label>Collections Complaint Issue 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Các loại phí, lãi phát sinh</fullName>
            </value>
            <value>
                <fullName>Chương trình khuyến mãi</fullName>
            </value>
            <value>
                <fullName>Hình thức thanh toán</fullName>
            </value>
            <value>
                <fullName>Khoản thanh toán đến hạn</fullName>
            </value>
            <value>
                <fullName>Khoản thanh toán tối thiểu</fullName>
            </value>
            <value>
                <fullName>Số tiền kỳ góp</fullName>
            </value>
            <value>
                <fullName>Số tiền tất toán</fullName>
            </value>
            <value>
                <fullName>Thời hạn thanh toán</fullName>
            </value>
            <value>
                <fullName>Thông tin thẻ RS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>