force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Collx_Transfer_Sub_Code__c.field-meta.xml
<CustomField>
    <fullName>FEC_Collx_Transfer_Sub_Code__c</fullName>
    <label>Collx Transfer Sub Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>