force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Complaint_Assessment__c.field-meta.xml
<CustomField>
    <fullName>FEC_Complaint_Assessment__c</fullName>
    <description>Đánh giá loại khiếu nại</description>
    <label>Complaint Assessment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lỗi thái độ</fullName>
            </value>
            <value>
                <fullName>Lỗi kỹ năng</fullName>
            </value>
            <value>
                <fullName>Lỗi hệ thống</fullName>
            </value>
            <value>
                <fullName>Khiếu nại sai</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>