force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Complaint_Description__c.field-meta.xml
<CustomField>
    <fullName>FEC_Complaint_Description__c</fullName>
    <description>Mô tả khiếu nại</description>
    <label>Complaint Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>