force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Complaint_Issue_1__c.field-meta.xml
<CustomField>
    <fullName>FEC_Complaint_Issue_1__c</fullName>
    <description>Vấn đề khiếu nại (1)</description>
    <label>Complaint Issue 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quá 5 cuộc gọi thành công/ ngày</fullName>
            </value>
            <value>
                <fullName>Ngoài khung giờ 7:00 - 21:00</fullName>
            </value>
            <value>
                <fullName>Nhiều cuộc gọi nhá máy</fullName>
            </value>
            <value>
                <fullName>Sử dụng thiết bị ngoài</fullName>
            </value>
            <value>
                <fullName>Kỹ năng</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>