force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Complaint_Issue_2__c.field-meta.xml
<CustomField>
    <fullName>FEC_Complaint_Issue_2__c</fullName>
    <description>Vấn đề khiếu nại (2)</description>
    <label>Complaint Issue 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hoàn lãi/ phí phát sinh sai</fullName>
            </value>
            <value>
                <fullName>Sai thông tin lịch thanh toán</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>