force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Complaint_Product_1__c.field-meta.xml
<CustomField>
    <fullName>FEC_Complaint_Product_1__c</fullName>
    <description>Sản phẩm liên quan khiếu nại (1)</description>
    <label>Complaint Product 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PL</fullName>
            </value>
            <value>
                <fullName>CDL</fullName>
            </value>
            <value>
                <fullName>TW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>