force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Complaint_Product_2__c.field-meta.xml
<CustomField>
    <fullName>FEC_Complaint_Product_2__c</fullName>
    <description>Sản phẩm liên quan khiếu nại (2)</description>
    <label>Complaint Product 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Giao dịch ACL</fullName>
            </value>
            <value>
                <fullName>Giao dịch GNN</fullName>
            </value>
            <value>
                <fullName>Giao dịch IPP</fullName>
            </value>
            <value>
                <fullName>Thẻ Dcard</fullName>
            </value>
            <value>
                <fullName>Thẻ MT1</fullName>
            </value>
            <value>
                <fullName>Thẻ RS</fullName>
            </value>
            <value>
                <fullName>Các loại thẻ còn lại</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>