force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Complaint_Reason__c.field-meta.xml
<CustomField>
    <fullName>FEC_Complaint_Reason__c</fullName>
    <description>Lý do khiếu nại</description>
    <label>Complaint Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incorrect/Incomplete Advice</fullName>
            </value>
            <value>
                <fullName>Staff Collected Money</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>