force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Complaint_Related_Collection__c.field-meta.xml
<CustomField>
    <fullName>FEC_Complaint_Related_Collection__c</fullName>
    <description>Khiếu nại liên quan thu hồi nợ</description>
    <label>Complaint Related Collection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Có</fullName>
            </value>
            <value>
                <fullName>Không</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>