force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Consultant_Info__c.field-meta.xml
<CustomField>
    <fullName>FEC_Consultant_Info__c</fullName>
    <description>Thông tin nhân viên tư vấn</description>
    <label>Consultant Info</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Total Loan Amount</fullName>
            </value>
            <value>
                <fullName>Interest Rate</fullName>
            </value>
            <value>
                <fullName>Collection Fee</fullName>
            </value>
            <value>
                <fullName>Loan Insurance</fullName>
            </value>
            <value>
                <fullName>Penalty Interest/Fee</fullName>
            </value>
            <value>
                <fullName>Contract Settlement</fullName>
            </value>
            <value>
                <fullName>Duplicate Top-up Contract Period</fullName>
            </value>
            <value>
                <fullName>Installment Amount</fullName>
            </value>
            <value>
                <fullName>Number of Installments</fullName>
            </value>
            <value>
                <fullName>Due Date</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>