force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Consumption_Loan__c.field-meta.xml
<CustomField>
    <fullName>FEC_Consumption_Loan__c</fullName>
    <description>KH vay với mục đích tiêu dùng đúng không?</description>
    <label>Consumption Loan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>