force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Contact_Attempt__c.field-meta.xml
<CustomField>
    <fullName>FEC_Contact_Attempt__c</fullName>
    <description>Lần liên hệ / nỗ lực tiếp cận</description>
    <label>Contact Attempt</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lần 1</fullName>
            </value>
            <value>
                <fullName>Từ 2 lần</fullName>
            </value>
            <value>
                <fullName>Kiểm tra lại</fullName>
            </value>
            <value>
                <fullName>Bổ sung hình ảnh</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>