force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Contact_Channel__c.field-meta.xml
<CustomField>
    <fullName>FEC_Contact_Channel__c</fullName>
    <description>Kênh liên hệ</description>
    <label>Contact Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>