force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_Contact_Name__c</fullName>
    <description>Tên người liên hệ</description>
    <label>Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>