force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Contact_Party__c.field-meta.xml
<CustomField>
    <fullName>FEC_Contact_Party__c</fullName>
    <description>Bên liên hệ</description>
    <label>Contact Party</label>
    <length>255</length>
    <type>Text</type>
</CustomField>