force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Contacting_Institution__c.field-meta.xml
<CustomField>
    <fullName>FEC_Contacting_Institution__c</fullName>
    <description>Tổ chức / đơn vị liên hệ</description>
    <label>Contacting Institution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>