force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Contract_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>FEC_Contract_Account_Number__c</fullName>
    <description>Số HĐ/ TK</description>
    <label>Contract / Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>